<resources>
    <string name="app_name">training</string>
    <string name="message">Hello World</string>
    <string name="caption">P E O P L E</string>
    <string name="labelFirstname">Firstname:</string>
    <string name="labelGender">Gender:</string>
    <string name="labelHeight">Height:</string>
    <string name="buttonSave">Save</string>
    <string name="buttonReset">Clear</string>
    <string name="labelLastname">Lastname:</string>
    <string name="saveMessage">Clicked save</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="backButtonCaption">Back</string>
    <string name="goto_person_input_caption">Goto Person Input</string>
    <string name="goto_people_list_caption">Goto People List</string>


</resources>